--- a/genindex.html
+++ b/genindex.html
@@ -366,20 +366,20 @@ document.write(`
 <h2 id="A">A</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="doc/atomdb.html#atomdb.Element.at_radius">at_radius (Element property)</a>
+      <li><a href="doc/atomdb.html#atomdb.Element.at_radius">at_radius (atomdb.Element property)</a>
 
       <ul>
-        <li><a href="doc/atomdb.html#atomdb.Species.at_radius">(Species property)</a>
+        <li><a href="doc/atomdb.html#atomdb.Species.at_radius">(atomdb.Species property)</a>
 </li>
       </ul></li>
-      <li><a href="doc/atomdb.html#atomdb.Species.atmass">atmass (Species property)</a>
+      <li><a href="doc/atomdb.html#atomdb.Species.atmass">atmass (atomdb.Species property)</a>
 </li>
-      <li><a href="doc/atomdb.html#atomdb.Element.atnum">atnum (Element attribute)</a>
+      <li><a href="doc/atomdb.html#atomdb.Element.atnum">atnum (atomdb.Element attribute)</a>
 
       <ul>
-        <li><a href="doc/atomdb.html#id0">(Element property)</a>
+        <li><a href="doc/atomdb.html#id0">(atomdb.Element property)</a>
 </li>
-        <li><a href="doc/atomdb.html#atomdb.Species.atnum">(Species property)</a>
+        <li><a href="doc/atomdb.html#atomdb.Species.atnum">(atomdb.Species property)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -391,7 +391,7 @@ document.write(`
         <li><a href="doc/atomdb.html#module-atomdb">module</a>
 </li>
       </ul></li>
-      <li><a href="doc/atomdb.html#atomdb.Promolecule.atoms">atoms (Promolecule attribute)</a>
+      <li><a href="doc/atomdb.html#atomdb.Promolecule.atoms">atoms (atomdb.Promolecule attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -399,24 +399,24 @@ document.write(`
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="doc/atomdb.html#atomdb.Element.c6">c6 (Element property)</a>
+      <li><a href="doc/atomdb.html#atomdb.Element.c6">c6 (atomdb.Element property)</a>
 </li>
-      <li><a href="doc/atomdb.html#atomdb.Species.charge">charge (Species property)</a>
+      <li><a href="doc/atomdb.html#atomdb.Species.charge">charge (atomdb.Species property)</a>
 </li>
-      <li><a href="doc/atomdb.html#atomdb.Promolecule.charge">charge() (Promolecule method)</a>
+      <li><a href="doc/atomdb.html#atomdb.Promolecule.charge">charge() (atomdb.Promolecule method)</a>
 </li>
-      <li><a href="doc/atomdb.html#atomdb.Promolecule.coeffs">coeffs (Promolecule attribute)</a>
+      <li><a href="doc/atomdb.html#atomdb.Promolecule.coeffs">coeffs (atomdb.Promolecule attribute)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="doc/atomdb.html#atomdb.compile">compile() (in module atomdb)</a>
 </li>
-      <li><a href="doc/atomdb.html#atomdb.Promolecule.coords">coords (Promolecule attribute)</a>
+      <li><a href="doc/atomdb.html#atomdb.Promolecule.coords">coords (atomdb.Promolecule attribute)</a>
 </li>
-      <li><a href="doc/atomdb.html#atomdb.Element.cov_radius">cov_radius (Element property)</a>
+      <li><a href="doc/atomdb.html#atomdb.Element.cov_radius">cov_radius (atomdb.Element property)</a>
 
       <ul>
-        <li><a href="doc/atomdb.html#atomdb.Species.cov_radius">(Species property)</a>
+        <li><a href="doc/atomdb.html#atomdb.Species.cov_radius">(atomdb.Species property)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -425,19 +425,19 @@ document.write(`
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="doc/atomdb.html#atomdb.Species.d_dens_func">d_dens_func() (Species method)</a>
+      <li><a href="doc/atomdb.html#atomdb.Species.d_dens_func">d_dens_func() (atomdb.Species method)</a>
 </li>
-      <li><a href="doc/atomdb.html#atomdb.Species.dataset">dataset (Species property)</a>
+      <li><a href="doc/atomdb.html#atomdb.Species.dataset">dataset (atomdb.Species property)</a>
 </li>
-      <li><a href="doc/atomdb.html#atomdb.Species.dd_dens_func">dd_dens_func() (Species method)</a>
+      <li><a href="doc/atomdb.html#atomdb.Species.dd_dens_func">dd_dens_func() (atomdb.Species method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="doc/atomdb.html#atomdb.Species.dens_func">dens_func() (Species method)</a>
+      <li><a href="doc/atomdb.html#atomdb.Species.dens_func">dens_func() (atomdb.Species method)</a>
 </li>
-      <li><a href="doc/atomdb.html#atomdb.Promolecule.density">density() (Promolecule method)</a>
+      <li><a href="doc/atomdb.html#atomdb.Promolecule.density">density() (atomdb.Promolecule method)</a>
 </li>
-      <li><a href="doc/atomdb.html#atomdb.Species.dispersion_c6">dispersion_c6 (Species property)</a>
+      <li><a href="doc/atomdb.html#atomdb.Species.dispersion_c6">dispersion_c6 (atomdb.Species property)</a>
 </li>
       <li><a href="doc/atomdb.html#atomdb.dump">dump() (in module atomdb)</a>
 </li>
@@ -447,7 +447,7 @@ document.write(`
 <h2 id="E">E</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="doc/atomdb.html#atomdb.Species.elem">elem (Species property)</a>
+      <li><a href="doc/atomdb.html#atomdb.Species.elem">elem (atomdb.Species property)</a>
 </li>
       <li><a href="doc/atomdb.html#atomdb.Element">Element (class in atomdb)</a>
 </li>
@@ -459,15 +459,15 @@ document.write(`
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="doc/atomdb.html#atomdb.Element.eneg">eneg (Element property)</a>
+      <li><a href="doc/atomdb.html#atomdb.Element.eneg">eneg (atomdb.Element property)</a>
 </li>
-      <li><a href="doc/atomdb.html#atomdb.Species.energy">energy (Species property)</a>
+      <li><a href="doc/atomdb.html#atomdb.Species.energy">energy (atomdb.Species property)</a>
 </li>
-      <li><a href="doc/atomdb.html#atomdb.Promolecule.energy">energy() (Promolecule method)</a>
+      <li><a href="doc/atomdb.html#atomdb.Promolecule.energy">energy() (atomdb.Promolecule method)</a>
 </li>
-      <li><a href="doc/atomdb.html#atomdb.Species.eta">eta (Species property)</a>
+      <li><a href="doc/atomdb.html#atomdb.Species.eta">eta (atomdb.Species property)</a>
 </li>
-      <li><a href="doc/atomdb.html#atomdb.Promolecule.eta">eta() (Promolecule method)</a>
+      <li><a href="doc/atomdb.html#atomdb.Promolecule.eta">eta() (atomdb.Promolecule method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -475,13 +475,13 @@ document.write(`
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="doc/atomdb.html#atomdb.Species.get_docstring">get_docstring() (Species method)</a>
+      <li><a href="doc/atomdb.html#atomdb.Species.get_docstring">get_docstring() (atomdb.Species method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="doc/atomdb.html#atomdb.Promolecule.gradient">gradient() (Promolecule method)</a>
+      <li><a href="doc/atomdb.html#atomdb.Promolecule.gradient">gradient() (atomdb.Promolecule method)</a>
 </li>
-      <li><a href="doc/atomdb.html#atomdb.Element.group">group (Element property)</a>
+      <li><a href="doc/atomdb.html#atomdb.Element.group">group (atomdb.Element property)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -489,7 +489,7 @@ document.write(`
 <h2 id="H">H</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="doc/atomdb.html#atomdb.Promolecule.hessian">hessian() (Promolecule method)</a>
+      <li><a href="doc/atomdb.html#atomdb.Promolecule.hessian">hessian() (atomdb.Promolecule method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -497,11 +497,11 @@ document.write(`
 <h2 id="I">I</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="doc/atomdb.html#atomdb.Species.ip">ip (Species property)</a>
+      <li><a href="doc/atomdb.html#atomdb.Species.ip">ip (atomdb.Species property)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="doc/atomdb.html#atomdb.Promolecule.ip">ip() (Promolecule method)</a>
+      <li><a href="doc/atomdb.html#atomdb.Promolecule.ip">ip() (atomdb.Promolecule method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -509,11 +509,11 @@ document.write(`
 <h2 id="K">K</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="doc/atomdb.html#atomdb.Promolecule.ked">ked() (Promolecule method)</a>
+      <li><a href="doc/atomdb.html#atomdb.Promolecule.ked">ked() (atomdb.Promolecule method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="doc/atomdb.html#atomdb.Species.ked_func">ked_func() (Species method)</a>
+      <li><a href="doc/atomdb.html#atomdb.Species.ked_func">ked_func() (atomdb.Species method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -521,7 +521,7 @@ document.write(`
 <h2 id="L">L</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="doc/atomdb.html#atomdb.Promolecule.laplacian">laplacian() (Promolecule method)</a>
+      <li><a href="doc/atomdb.html#atomdb.Promolecule.laplacian">laplacian() (atomdb.Promolecule method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -533,9 +533,9 @@ document.write(`
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="doc/atomdb.html#atomdb.Element.mass">mass (Element property)</a>
+      <li><a href="doc/atomdb.html#atomdb.Element.mass">mass (atomdb.Element property)</a>
 </li>
-      <li><a href="doc/atomdb.html#atomdb.Promolecule.mass">mass() (Promolecule method)</a>
+      <li><a href="doc/atomdb.html#atomdb.Promolecule.mass">mass() (atomdb.Promolecule method)</a>
 </li>
       <li>
     module
@@ -546,17 +546,17 @@ document.write(`
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="doc/atomdb.html#atomdb.Species.mu">mu (Species property)</a>
+      <li><a href="doc/atomdb.html#atomdb.Species.mu">mu (atomdb.Species property)</a>
 </li>
-      <li><a href="doc/atomdb.html#atomdb.Promolecule.mu">mu() (Promolecule method)</a>
+      <li><a href="doc/atomdb.html#atomdb.Promolecule.mu">mu() (atomdb.Promolecule method)</a>
 </li>
-      <li><a href="doc/atomdb.html#atomdb.Element.mult">mult (Element property)</a>
+      <li><a href="doc/atomdb.html#atomdb.Element.mult">mult (atomdb.Element property)</a>
 
       <ul>
-        <li><a href="doc/atomdb.html#atomdb.Species.mult">(Species property)</a>
+        <li><a href="doc/atomdb.html#atomdb.Species.mult">(atomdb.Species property)</a>
 </li>
       </ul></li>
-      <li><a href="doc/atomdb.html#atomdb.Promolecule.mult">mult() (Promolecule method)</a>
+      <li><a href="doc/atomdb.html#atomdb.Promolecule.mult">mult() (atomdb.Promolecule method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -564,23 +564,23 @@ document.write(`
 <h2 id="N">N</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="doc/atomdb.html#atomdb.Element.name">name (Element attribute)</a>
+      <li><a href="doc/atomdb.html#atomdb.Element.name">name (atomdb.Element attribute)</a>
 
       <ul>
-        <li><a href="doc/atomdb.html#id1">(Element property)</a>
+        <li><a href="doc/atomdb.html#id1">(atomdb.Element property)</a>
 </li>
       </ul></li>
-      <li><a href="doc/atomdb.html#atomdb.Species.nelec">nelec (Species property)</a>
+      <li><a href="doc/atomdb.html#atomdb.Species.nelec">nelec (atomdb.Species property)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="doc/atomdb.html#atomdb.Promolecule.nelec">nelec() (Promolecule method)</a>
+      <li><a href="doc/atomdb.html#atomdb.Promolecule.nelec">nelec() (atomdb.Promolecule method)</a>
 </li>
-      <li><a href="doc/atomdb.html#atomdb.Species.nexc">nexc (Species property)</a>
+      <li><a href="doc/atomdb.html#atomdb.Species.nexc">nexc (atomdb.Species property)</a>
 </li>
-      <li><a href="doc/atomdb.html#atomdb.Species.nspin">nspin (Species property)</a>
+      <li><a href="doc/atomdb.html#atomdb.Species.nspin">nspin (atomdb.Species property)</a>
 </li>
-      <li><a href="doc/atomdb.html#atomdb.Promolecule.nspin">nspin() (Promolecule method)</a>
+      <li><a href="doc/atomdb.html#atomdb.Promolecule.nspin">nspin() (atomdb.Promolecule method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -588,7 +588,7 @@ document.write(`
 <h2 id="O">O</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="doc/atomdb.html#atomdb.Species.obasis_name">obasis_name (Species property)</a>
+      <li><a href="doc/atomdb.html#atomdb.Species.obasis_name">obasis_name (atomdb.Species property)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -596,13 +596,13 @@ document.write(`
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="doc/atomdb.html#atomdb.Element.period">period (Element property)</a>
+      <li><a href="doc/atomdb.html#atomdb.Element.period">period (atomdb.Element property)</a>
 </li>
-      <li><a href="doc/atomdb.html#atomdb.Species.polarizability">polarizability (Species property)</a>
+      <li><a href="doc/atomdb.html#atomdb.Species.polarizability">polarizability (atomdb.Species property)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="doc/atomdb.html#atomdb.Element.pold">pold (Element property)</a>
+      <li><a href="doc/atomdb.html#atomdb.Element.pold">pold (atomdb.Element property)</a>
 </li>
       <li><a href="doc/atomdb.html#atomdb.Promolecule">Promolecule (class in atomdb)</a>
 </li>
@@ -622,14 +622,14 @@ document.write(`
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="doc/atomdb.html#atomdb.Species">Species (class in atomdb)</a>
 </li>
-      <li><a href="doc/atomdb.html#atomdb.Species.spinpol">spinpol (Species property)</a>
+      <li><a href="doc/atomdb.html#atomdb.Species.spinpol">spinpol (atomdb.Species property)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="doc/atomdb.html#atomdb.Element.symbol">symbol (Element attribute)</a>
+      <li><a href="doc/atomdb.html#atomdb.Element.symbol">symbol (atomdb.Element attribute)</a>
 
       <ul>
-        <li><a href="doc/atomdb.html#id2">(Element property)</a>
+        <li><a href="doc/atomdb.html#id2">(atomdb.Element property)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -638,11 +638,11 @@ document.write(`
 <h2 id="T">T</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="doc/atomdb.html#atomdb.Species.to_dict">to_dict() (Species method)</a>
+      <li><a href="doc/atomdb.html#atomdb.Species.to_dict">to_dict() (atomdb.Species method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="doc/atomdb.html#atomdb.Species.to_json">to_json() (Species method)</a>
+      <li><a href="doc/atomdb.html#atomdb.Species.to_json">to_json() (atomdb.Species method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -650,10 +650,10 @@ document.write(`
 <h2 id="V">V</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="doc/atomdb.html#atomdb.Element.vdw_radius">vdw_radius (Element property)</a>
+      <li><a href="doc/atomdb.html#atomdb.Element.vdw_radius">vdw_radius (atomdb.Element property)</a>
 
       <ul>
-        <li><a href="doc/atomdb.html#atomdb.Species.vdw_radius">(Species property)</a>
+        <li><a href="doc/atomdb.html#atomdb.Species.vdw_radius">(atomdb.Species property)</a>
 </li>
       </ul></li>
   </ul></td>
